# CGameDemo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  player_character.c
src/dirt_border_down_tile/: dirt_border_down_tile.c  dirt_border_down_tile.h
src/dirt_border_up_tile/: dirt_border_up_tile.c  dirt_border_up_tile.h
src/dirt_tile/: dirt_tile.c  dirt_tile.h
src/fairy_character/: fairy_character.c  fairy_character.h
src/grass_tile/: grass_tile.c  grass_tile.h
src/includes/: player_character.h
